[project]
name = "roborover"
version = "0.1.0"
description = "RoboRover is a simple simulation of a toy robot on a tabletop, taking commands from the user to interact with the robot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.9.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["S101", "COM812", "G004", "PLR2004", "C901"]

[tool.ruff.lint.pydocstyle]
convention = "google"
